# visual-prog-android

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/calc/: CalculatorActivity.kt  LocationActivity.kt  MainActivity.kt  MediaPlayerActivity.kt  MusicAdapter.kt  TelemetryApplication.kt
app/src/main/java/com/example/calc/controllers/: CalculatorController.kt  LocationController.kt  MediaPlayerController.kt  TelephonyController.kt
app/src/main/java/com/example/calc/ui/: CalculatorActivity.kt  CrashLogViewerActivity.kt  ImPlotSignalChartView.kt  LocationActivity.kt  MainActivity.kt  MediaPlayerActivity.kt  SentSnapshotsActivity.kt  TelephonyActivity.kt  ZMQActivity.kt  (+1 more)
app/src/main/res/layout/: activity_calculator.xml  activity_crash_log_viewer.xml  activity_location.xml  activity_main.xml  activity_media_player.xml  activity_sent_snapshots.xml  activity_telephony.xml  activity_zmq.xml  item_music_file.xml  item_sent_snapshot.xml
clients/: client_tcp.c  client_tcp.py  client_udp.c  client_udp.py
cpp_server/: CMakeLists.txt  README.md  build.sh
cpp_server/config/: server_config.json
cpp_server/src/: data_structs.hpp  gui_thread.cpp  gui_thread.hpp  main.cpp  zmq_server.cpp  zmq_server.hpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
python_server/: zmq_server.py
server/: server.c  server.py
src/: Main.kt
src/entity/: Driver.kt  Human.kt  Movable.kt
src/manager/: PositionManager.kt
src/model/: Position.kt
src/util/: Utils.kt
(+17 files in other folders)
